manifest/objects/L2O_Platform_Event_Published__c.object
<CustomObject>
    <fields>
        <fullName>L2O_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Object_Id__c</fullName>
        <label>Object Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Object__c</fullName>
        <label>Object</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Platform_Event_Replay_Id__c</fullName>
        <label>Platform Event replay Id</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Platform_event_Name__c</fullName>
        <label>Platform event Name</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Errored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Platform Event Published</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>L2O_Platform_event_Name__c</columns>
        <columns>L2O_Platform_Event_Replay_Id__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>L2O_Status__c</columns>
        <columns>L2O_Object_Id__c</columns>
        <columns>L2O_Object__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Platform Event Published Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Events Published</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>